compiler/testData/diagnostics/tests/modifiers/primaryConstructorMissingBrackets.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
class A private constructor<!SYNTAX!><!> {
}
